Implemented NBT-enabled smithing recipe. Started implementing bayonet attack functionality.

--- a/src/main/resources/assets/musketeer/lang/en_us.json
+++ b/src/main/resources/assets/musketeer/lang/en_us.json
@@ -10,7 +10,7 @@
   "item.musketeer.musket.loaded": "§c§lLoaded§r",
   "item.musketeer.musket.shift_info_hint": "§7§oHold [Shift] for more info§r",
   "item.musketeer.musket.shift_info_1": "§a[RMB]: §7hold to load, then press to fire§r",
-  "item.musketeer.musket.shift_info_2": "§a[LMB]: §7butt-stroke attack§r",
+  "item.musketeer.musket.shift_info_2": "§a[LMB]: §7Melee attack: butt-stroke or bayonet (if attached)§r",
   "item.musketeer.musket.shift_info_3": "§a[Crouch] §7for precise aiming§r",
 
   "entity.musketeer.musket_projectile": "Musket Projectile",
@@ -19,6 +19,7 @@
   "sound.bullet.ricochet": "Bullet ricochets",
   "sound.musket.shot": "Musket shoots",
   "sound.musket.buttstroke": "Musket butt stroke",
+  "sound.musket.bayonet_strike": "Musket bayonet strike",
   "sound.musket.misfire": "Musket misfires",
   "sound.musket.cock_start": "Musket cocking",
   "sound.musket.cock_half": "Musket half-cocked",
@@ -29,6 +30,8 @@
   "death.attack.bullet.name": "%1$s was sniped by %2$s using %3$s",
   "death.attack.musket_buttstroke": "%1$s was butt-stroked by %2$s",
   "death.attack.musket_buttstroke.name": "%1$s was butt-stroked by %2$s using %3$s",
+  "death.attack.musket_bayonet": "%1$s was bayoneted by %2$s",
+  "death.attack.musket_bayonet.name": "%1$s was bayoneted by %2$s using %3$s",
   "death.attack.musket_explosion": "%1$s's old musket got its revenge",
 
   "advancements.musketeer.root.title": "Musketeer",
